Cropping fix, poster banner updates

--- a/application/views/home/home.css
+++ b/application/views/home/home.css
@@ -131,3 +131,20 @@ div.poster-outer-box{
     display:inline-block;
     margin-right:5px;
 }
+
+.profile h2, .profile h3{
+    text-align: center;
+}
+
+.profile h3:first-of-type{
+    margin-top: 30px;
+}
+
+.user-profile{
+    height: 400px;
+    width: 300px;
+    margin: auto;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
